@@ -1,5 +1,11 @@
 2006-07-25  Johan Bilien <johan.bilien@nokia.com>
 
+	* hildon-navigator/hn-wm-watched-window.c:
+	  - manually top a hildon-app when coming out of hibernation
+	  - various cleanups
+
+2006-07-25  Johan Bilien <johan.bilien@nokia.com>
+
 	Applied fix to "Crash:When opening an application that was perviously BG
 	killed and closed using the "x" in AS menu." (Closes NB#35605)
 	* Remove a window from the hibernating hash-table if bg_killed app
